test: add unit tests to improve service layer coverage